--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,13 @@
   background-image: radial-gradient(#4CAF50 1px, transparent 1px);
   background-size: 50px 50px;
 }
+
+#lovable-badge {
+    display: none !important;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+}
